scripts/nullaway/wpi/urld499b6e5aa_HatlessFox_StPatrickSimulation_tgz-pJ8-ru_spbau_sd_MainJ8.txt
../wpi/urld499b6e5aa_HatlessFox_StPatrickSimulation_tgz-pJ8-ru_spbau_sd_MainJ8/src/ru/spbau/sd/Main.java:61: error: [NullAway] dereferenced expression Field.getInstance() is @Nullable
        Field.getInstance().addMovable(new Drinker(0, 0));
                           ^
    (see http://t.uber.com/nullaway )
../wpi/urld499b6e5aa_HatlessFox_StPatrickSimulation_tgz-pJ8-ru_spbau_sd_MainJ8/src/ru/spbau/sd/field/hex/HexFieldStringSerializer.java:33: error: [NullAway] dereferenced expression Field.getInstance() is @Nullable
        char[][] tableView = Field.getInstance().getTableView();
                                                ^
    (see http://t.uber.com/nullaway )
../wpi/urld499b6e5aa_HatlessFox_StPatrickSimulation_tgz-pJ8-ru_spbau_sd_MainJ8/src/ru/spbau/sd/model/framework/Field.java:126: error: [NullAway] dereferenced expression getInstance() is @Nullable
        return getInstance().mFDF.getFieldGeometry().arePointsNear(x1, y1, x2, y2);
                            ^
    (see http://t.uber.com/nullaway )
../wpi/urld499b6e5aa_HatlessFox_StPatrickSimulation_tgz-pJ8-ru_spbau_sd_MainJ8/src/ru/spbau/sd/model/framework/FieldObject.java:81: error: [NullAway] dereferenced expression mIntHandlers.getHandler(obj.getClass()) is @Nullable
            mIntHandlers.getHandler(obj.getClass()).performInteraction(this, obj);
                                                   ^
    (see http://t.uber.com/nullaway )
../wpi/urld499b6e5aa_HatlessFox_StPatrickSimulation_tgz-pJ8-ru_spbau_sd_MainJ8/src/ru/spbau/sd/field/sq/SquareFieldStringSerializer.java:33: error: [NullAway] dereferenced expression Field.getInstance() is @Nullable
        char[][] tableView = Field.getInstance().getTableView();
                                                ^
    (see http://t.uber.com/nullaway )
../wpi/urld499b6e5aa_HatlessFox_StPatrickSimulation_tgz-pJ8-ru_spbau_sd_MainJ8/src/ru/spbau/sd/view/FieldConsoleWriter.java:36: error: [NullAway] dereferenced expression Field.getInstance() is @Nullable
        System.out.print(Field.getInstance().toString());
                                            ^
    (see http://t.uber.com/nullaway )
../wpi/urld499b6e5aa_HatlessFox_StPatrickSimulation_tgz-pJ8-ru_spbau_sd_MainJ8/src/ru/spbau/sd/model/game/MumperHouse.java:41: error: [NullAway] dereferenced expression Field.getInstance() is @Nullable
        Field.getInstance().addEndTurnListener(this);
                           ^
    (see http://t.uber.com/nullaway )
../wpi/urld499b6e5aa_HatlessFox_StPatrickSimulation_tgz-pJ8-ru_spbau_sd_MainJ8/src/ru/spbau/sd/model/game/MumperHouse.java:57: error: [NullAway] dereferenced expression Field.getInstance() is @Nullable
                Field.getInstance().removeMovable(mumperOut);
                                   ^
    (see http://t.uber.com/nullaway )
../wpi/urld499b6e5aa_HatlessFox_StPatrickSimulation_tgz-pJ8-ru_spbau_sd_MainJ8/src/ru/spbau/sd/model/framework/Generator.java:40: error: [NullAway] dereferenced expression Field.getInstance() is @Nullable
        FieldGeometry fg = Field.getInstance().getGeometry();
                                              ^
    (see http://t.uber.com/nullaway )
../wpi/urld499b6e5aa_HatlessFox_StPatrickSimulation_tgz-pJ8-ru_spbau_sd_MainJ8/src/ru/spbau/sd/model/framework/Generator.java:52: error: [NullAway] dereferenced expression Field.getInstance() is @Nullable
            if (Field.getInstance().isPosFree(ep)) {
                                   ^
    (see http://t.uber.com/nullaway )
../wpi/urld499b6e5aa_HatlessFox_StPatrickSimulation_tgz-pJ8-ru_spbau_sd_MainJ8/src/ru/spbau/sd/model/framework/Generator.java:64: error: [NullAway] dereferenced expression Field.getInstance() is @Nullable
            if (Field.getInstance().isPosFree(ep)) {
                                   ^
    (see http://t.uber.com/nullaway )
../wpi/urld499b6e5aa_HatlessFox_StPatrickSimulation_tgz-pJ8-ru_spbau_sd_MainJ8/src/ru/spbau/sd/model/game/Mumper.java:53: error: [NullAway] dereferenced expression Field.getInstance() is @Nullable
                Field.getInstance().removeStationary(bottle);
                                   ^
    (see http://t.uber.com/nullaway )
../wpi/urld499b6e5aa_HatlessFox_StPatrickSimulation_tgz-pJ8-ru_spbau_sd_MainJ8/src/ru/spbau/sd/model/game/Mumper.java:69: error: [NullAway] dereferenced expression Field.getInstance() is @Nullable
                int x = bottleCompass.nextInt(Field.getInstance().getXBound());
                                                                 ^
    (see http://t.uber.com/nullaway )
../wpi/urld499b6e5aa_HatlessFox_StPatrickSimulation_tgz-pJ8-ru_spbau_sd_MainJ8/src/ru/spbau/sd/model/game/Light.java:43: error: [NullAway] dereferenced expression Field.getInstance() is @Nullable
        for (FieldObject fo : Field.getInstance().getAllFieldObjects()) {
                                                 ^
    (see http://t.uber.com/nullaway )
../wpi/urld499b6e5aa_HatlessFox_StPatrickSimulation_tgz-pJ8-ru_spbau_sd_MainJ8/src/ru/spbau/sd/model/game/GameUtils.java:41: error: [NullAway] dereferenced expression Field.getInstance() is @Nullable
        int x_dem = Field.getInstance().getXBound() + 2;
                                       ^
    (see http://t.uber.com/nullaway )
../wpi/urld499b6e5aa_HatlessFox_StPatrickSimulation_tgz-pJ8-ru_spbau_sd_MainJ8/src/ru/spbau/sd/model/game/GameUtils.java:127: error: [NullAway] dereferenced expression Field.getInstance() is @Nullable
                if (!Field.getInstance().isInsideField(i - 1, j - 1)) {
                                        ^
    (see http://t.uber.com/nullaway )
../wpi/urld499b6e5aa_HatlessFox_StPatrickSimulation_tgz-pJ8-ru_spbau_sd_MainJ8/src/ru/spbau/sd/model/game/Tavern.java:35: error: [NullAway] dereferenced expression Field.getInstance() is @Nullable
        Field.getInstance().addEndTurnListener(this);
                           ^
    (see http://t.uber.com/nullaway )
../wpi/urld499b6e5aa_HatlessFox_StPatrickSimulation_tgz-pJ8-ru_spbau_sd_MainJ8/src/ru/spbau/sd/model/game/Drinker.java:67: error: [NullAway] dereferenced expression Field.getInstance() is @Nullable
                FieldGeometry fg = Field.getInstance().getGeometry();
                                                      ^
    (see http://t.uber.com/nullaway )
../wpi/urld499b6e5aa_HatlessFox_StPatrickSimulation_tgz-pJ8-ru_spbau_sd_MainJ8/src/ru/spbau/sd/model/game/Drinker.java:133: error: [NullAway] dereferenced expression bottle is @Nullable
            bottle.setNewPosition(getX(), getY());
                  ^
    (see http://t.uber.com/nullaway )
../wpi/urld499b6e5aa_HatlessFox_StPatrickSimulation_tgz-pJ8-ru_spbau_sd_MainJ8/src/ru/spbau/sd/model/game/Drinker.java:134: error: [NullAway] dereferenced expression Field.getInstance() is @Nullable
            Field.getInstance().addStationary(bottle);
                               ^
    (see http://t.uber.com/nullaway )
../wpi/urld499b6e5aa_HatlessFox_StPatrickSimulation_tgz-pJ8-ru_spbau_sd_MainJ8/src/ru/spbau/sd/model/game/PoliceStation.java:52: error: [NullAway] dereferenced expression Field.getInstance() is @Nullable
        Field.getInstance().addEndTurnListener(this);
                           ^
    (see http://t.uber.com/nullaway )
../wpi/urld499b6e5aa_HatlessFox_StPatrickSimulation_tgz-pJ8-ru_spbau_sd_MainJ8/src/ru/spbau/sd/model/game/PoliceStation.java:72: error: [NullAway] passing @Nullable parameter 'p.getCatchedBadGuy()' where @NonNull is required
                Field.getInstance().removeMovable(p.getCatchedBadGuy());
                                                                    ^
    (see http://t.uber.com/nullaway )
../wpi/urld499b6e5aa_HatlessFox_StPatrickSimulation_tgz-pJ8-ru_spbau_sd_MainJ8/src/ru/spbau/sd/model/game/PoliceStation.java:72: error: [NullAway] dereferenced expression Field.getInstance() is @Nullable
                Field.getInstance().removeMovable(p.getCatchedBadGuy());
                                   ^
    (see http://t.uber.com/nullaway )
../wpi/urld499b6e5aa_HatlessFox_StPatrickSimulation_tgz-pJ8-ru_spbau_sd_MainJ8/src/ru/spbau/sd/model/game/PoliceStation.java:74: error: [NullAway] dereferenced expression Field.getInstance() is @Nullable
            Field.getInstance().removeMovable(p);
                               ^
    (see http://t.uber.com/nullaway )
../wpi/urld499b6e5aa_HatlessFox_StPatrickSimulation_tgz-pJ8-ru_spbau_sd_MainJ8/src/ru/spbau/sd/model/game/PoliceStation.java:110: error: [NullAway] dereferenced expression Field.getInstance() is @Nullable
        for (FieldObject fo_stat : Field.getInstance().getAllFieldObjects()) {
                                                      ^
    (see http://t.uber.com/nullaway )
../wpi/urld499b6e5aa_HatlessFox_StPatrickSimulation_tgz-pJ8-ru_spbau_sd_MainJ8/src/ru/spbau/sd/model/game/Policeman.java:64: error: [NullAway] dereferenced expression Field.getInstance() is @Nullable
                    Field.getInstance().removeMovable(mBadGuy);
                                       ^
    (see http://t.uber.com/nullaway )
Note: ../wpi/urld499b6e5aa_HatlessFox_StPatrickSimulation_tgz-pJ8-ru_spbau_sd_MainJ8/src/ru/spbau/sd/model/framework/FieldObject.java uses unchecked or unsafe operations.
Note: Recompile with -Xlint:unchecked for details.
26 errors
